fix deploy issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "framework": "nextjs",
   "buildCommand": "cd pricing-dashboard && npm run build",
-  "outputDirectory": "pricing-dashboard/.next",
-  "rootDirectory": "pricing-dashboard"
+  "outputDirectory": "pricing-dashboard/.next"
 }
