Update build configuration to use --legacy-peer-deps for dependency conflicts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "cd pricing-dashboard && npm run build",
     "dev": "cd pricing-dashboard && npm run dev",
-    "start": "cd pricing-dashboard && npm run start"
+    "start": "cd pricing-dashboard && npm run start",
+    "vercel-build": "npm install --legacy-peer-deps && cd pricing-dashboard && npm run build"
   },
   "dependencies": {
     "next": "15.2.4",
